Change ProductTest to use Junit 5